# sora-rs

./: .gitignore  Cargo.toml  README.md
src/: endpoints.rs  main.rs  utils.rs
src/endpoints/: index.rs  upload.rs  uploads.rs
src/utils/: config.rs  database.rs  files.rs  users.rs
static/: style.css
templates/: index.html  upload.html
