[package]
name = "sora-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-multipart = "0.6.1"
actix-files = "0.6.5"
serde = "1.0.197"
serde_json = "1.0.114"
serde_derive = "1.0.197"
futures = "0.3.30"
config = { version = "0.14.0", features = ["toml"] }
qstring = "0.7.2"
lazy_static = "1.4.0"
async_once = "0.2.6"
bcrypt = "0.15"
rand = "0.8.5"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]